--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-.h linguist-language=cpp
-.js linguist-language=cpp
-.html linguist-language=cpp
+.h linguist-language=c++
+.js linguist-language=c++
+.html linguist-language=c++
