--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-.h linguist-language=c++
-.js linguist-language=c++
-.html linguist-language=c++
+*.h linguist-language=c++
+*.js linguist-language=c++
+*.html linguist-language=c++
