--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.h linguist-language=c++
-*.js linguist-language=c++
-*.html linguist-language=c++
+*.h linguist-language=C++
+*.js linguist-language=C++
+*.html linguist-language=C++
