--- a/Code/OpenGL/OpenGL.vcxproj
+++ b/Code/OpenGL/OpenGL.vcxproj
@@ -161,8 +161,8 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="fragmentSource.glsl" />
-    <Text Include="vertexSource.glsl" />
+    <Text Include="fragmentSource.frag" />
+    <Text Include="vertexSource.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Image\awesomeface.png" />
