--- a/Code/OpenGL/OpenGL.vcxproj.filters
+++ b/Code/OpenGL/OpenGL.vcxproj.filters
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Text Include="vertexSource.vert" />
     <Text Include="fragmentSource.frag" />
+    <Text Include="lightFragment.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Image\awesomeface.png">
@@ -56,5 +57,11 @@
     <Image Include="Image\head.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="Image\container2.png">
+      <Filter>资源文件</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="lightVertex.vert" />
   </ItemGroup>
 </Project>
