--- a/Code/OpenGL/OpenGL.vcxproj.filters
+++ b/Code/OpenGL/OpenGL.vcxproj.filters
@@ -60,6 +60,9 @@
     <Image Include="Image\container2.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="Image\container2_specular.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="lightVertex.vert" />
